# blizzlikecore

./: .gitignore  .travis.yml  CMakeLists.txt  CREDITS.md  README.md  debian_build.sh  windows_build.bat
cmake/: FindVisualStudio2010.cmake  FindVisualStudio2012.cmake  ImportACE.cmake  ImportTBB.cmake
contrib/docs/: EventAI.txt
contrib/registration_form/: index.php
contrib/registration_form/expanded/: index.php
contrib/soap/: example.php
dep/: CMakeLists.txt
dep/ACE_wrappers/: CMakeLists.txt  configure  configure.ac  configure.ac~
dep/ACE_wrappers/aux_config/: config.guess  config.sub  ltmain.sh
dep/ACE_wrappers/contrib/FaCE/: Thumbs.db
dep/ACE_wrappers/m4/: pkg.m4
dep/fastmm/Delphi/: FastMM.dpr  FastMMx64.dpr
dep/lib/win32_debug/: .gitignore
dep/libmpq/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/src/: CMakeLists.txt
dep/src/bzip2/: CMakeLists.txt
dep/src/g3dlite/: CMakeLists.txt
dep/src/gsoap/: CMakeLists.txt
dep/src/zlib/: CMakeLists.txt
dep/tbb/: CMakeLists.txt  COPYING
patch/: accpremium.patch  anticheat.patch  autobroadcast.patch  devtools.patch  mapupdatethreads.patch  mountonloan.patch  raf.patch  savepersec.patch  transmogrification.patch  warden.patch
patch/test/: 33.patch
sql/: debian_sql.sh  windows_sql.bat
sql/development/patch/: Autobroadcast.sql  RAF_auth.sql  RAF_characters.sql  RAF_world.sql  spell_disabled.sql
sql/development/warden/: 02_authserver_warden_data_result.sql
sql/development/world/: Test_Item_teleport.sql  world_spell_disabled.sql  world_updates.sql  world_updates_01_24_10_2013.sql  world_updates_24_10_2013.sql
sql/updates/: world_updates.sql
src/: CMakeLists.txt
src/authserver/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  authserver.conf.dist.in  authserver.rc
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.h  MemoryManagement.cpp  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  TypeList.h  UnorderedMapSet.h
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  AggressorAI.cpp  AggressorAI.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  BattleGround.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Cell.h  CellImpl.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.cpp  ChannelMgr.h  CharacterDatabaseCleaner.cpp  CharacterDatabaseCleaner.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureAI.h  (+214 more)
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  ahbot.conf.dist.in
src/game/BattleGround/: BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h
src/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPEP.cpp  OutdoorPvPEP.h  OutdoorPvPHP.cpp  OutdoorPvPHP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h  OutdoorPvPNA.cpp  OutdoorPvPNA.h  OutdoorPvPSI.cpp  OutdoorPvPSI.h  OutdoorPvPTF.cpp  OutdoorPvPTF.h  OutdoorPvPZM.cpp  OutdoorPvPZM.h
src/game/Warden/: WardenBase.cpp  WardenBase.h  WardenDataStorage.cpp  WardenDataStorage.h  WardenMac.cpp  WardenMac.h  WardenModuleMac.h  WardenModuleWin.h  WardenWin.cpp  WardenWin.h
src/game/movement/: MoveSpline.cpp  MoveSpline.h  MoveSplineFlag.h  MoveSplineInit.cpp  MoveSplineInit.h  MoveSplineInitArgs.h  packet_builder.cpp  packet_builder.h  spline.cpp  spline.h  spline.impl.h  typedefs.h  util.cpp
src/game/vmap/: BIH.cpp  BIH.h  BIHWrap.h  DynamicTree.cpp  DynamicTree.h  GameObjectModel.cpp  GameObjectModel.h  IVMapManager.h  MapTree.cpp  MapTree.h  ModelInstance.cpp  ModelInstance.h  RegularGrid.h  TileAssembler.cpp  TileAssembler.h  VMapDefinitions.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h  VMapTools.h  WorldModel.cpp  WorldModel.h
src/scripts/: .gitignore  CMakeLists.txt  ScriptMgr.cpp  config.h  scripts.conf.dist.in
src/scripts/Outland/: terokkar_forest.cpp
src/scripts/base/: escort_ai.h  follower_ai.h  guard_ai.h  pet_ai.cpp  pet_ai.h
src/scripts/include/: precompiled.h  sc_creature.cpp  sc_creature.h  sc_grid_searchers.cpp  sc_instance.h
src/scripts/system/: BlizzLikeRev.cpp  ScriptLoader.cpp  system.cpp
src/shared/: .gitignore  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  DelayExecutor.cpp  DelayExecutor.h  Errors.h  LockedQueue.h  Log.cpp  Log.h  PosixDaemon.cpp  PosixDaemon.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h.in  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WorldPacket.h
src/tools/: CMakeLists.txt
src/tools/mmap_generator/: CMakeLists.txt  mmap_extract.py
src/tools/mmap_generator/src/: BlizzLikeMap.h  IntermediateValues.cpp  IntermediateValues.h  MMapCommon.h  MapBuilder.cpp  MapBuilder.h  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp  generator.cpp
src/worldserver/: BCSoap.cpp  BCSoap.h  CMakeLists.txt  CliRunnable.cpp  CliRunnable.h  Main.cpp  Master.cpp  Master.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  worldserver.conf.dist.in  worldserver.rc
(+378 files in other folders)
