#
# This file is part of the BlizzLikeCore Project. See CREDITS and LICENSE files
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

set(ace_STAT_SRCS
  ../../dep/ACE_wrappers/ace/ACE.cpp
  ../../dep/ACE_wrappers/ace/ACE_crc32.cpp
  ../../dep/ACE_wrappers/ace/ACE_crc_ccitt.cpp
  ../../dep/ACE_wrappers/ace/ace_wchar.cpp
  ../../dep/ACE_wrappers/ace/Activation_Queue.cpp
  ../../dep/ACE_wrappers/ace/Active_Map_Manager.cpp
  ../../dep/ACE_wrappers/ace/Addr.cpp
  ../../dep/ACE_wrappers/ace/Argv_Type_Converter.cpp
  ../../dep/ACE_wrappers/ace/Assert.cpp
  ../../dep/ACE_wrappers/ace/Asynch_IO.cpp
  ../../dep/ACE_wrappers/ace/Asynch_IO_Impl.cpp
  ../../dep/ACE_wrappers/ace/Asynch_Pseudo_Task.cpp
  ../../dep/ACE_wrappers/ace/ATM_Acceptor.cpp
  ../../dep/ACE_wrappers/ace/ATM_Addr.cpp
  ../../dep/ACE_wrappers/ace/ATM_Connector.cpp
  ../../dep/ACE_wrappers/ace/ATM_Params.cpp
  ../../dep/ACE_wrappers/ace/ATM_QoS.cpp
  ../../dep/ACE_wrappers/ace/ATM_Stream.cpp
  ../../dep/ACE_wrappers/ace/Atomic_Op.cpp
  ../../dep/ACE_wrappers/ace/Atomic_Op_Sparc.c
  ../../dep/ACE_wrappers/ace/Auto_Event.cpp
  ../../dep/ACE_wrappers/ace/Barrier.cpp
  ../../dep/ACE_wrappers/ace/Base_Thread_Adapter.cpp
  ../../dep/ACE_wrappers/ace/Based_Pointer_Repository.cpp
  ../../dep/ACE_wrappers/ace/Basic_Stats.cpp
  ../../dep/ACE_wrappers/ace/Basic_Types.cpp
  ../../dep/ACE_wrappers/ace/Capabilities.cpp
  ../../dep/ACE_wrappers/ace/CDR_Base.cpp
  ../../dep/ACE_wrappers/ace/CDR_Size.cpp
  ../../dep/ACE_wrappers/ace/CDR_Stream.cpp
  ../../dep/ACE_wrappers/ace/Cleanup.cpp
  ../../dep/ACE_wrappers/ace/Codecs.cpp
  ../../dep/ACE_wrappers/ace/Codeset_IBM1047.cpp
  ../../dep/ACE_wrappers/ace/Codeset_Registry.cpp
  ../../dep/ACE_wrappers/ace/Codeset_Registry_db.cpp
  ../../dep/ACE_wrappers/ace/Condition_Recursive_Thread_Mutex.cpp
  ../../dep/ACE_wrappers/ace/Condition_Thread_Mutex.cpp
  ../../dep/ACE_wrappers/ace/Configuration.cpp
  ../../dep/ACE_wrappers/ace/Configuration_Import_Export.cpp
  ../../dep/ACE_wrappers/ace/Connection_Recycling_Strategy.cpp
  ../../dep/ACE_wrappers/ace/Containers.cpp
  ../../dep/ACE_wrappers/ace/Copy_Disabled.cpp
  ../../dep/ACE_wrappers/ace/Countdown_Time.cpp
  ../../dep/ACE_wrappers/ace/Date_Time.cpp
  ../../dep/ACE_wrappers/ace/DEV.cpp
  ../../dep/ACE_wrappers/ace/DEV_Addr.cpp
  ../../dep/ACE_wrappers/ace/DEV_Connector.cpp
  ../../dep/ACE_wrappers/ace/DEV_IO.cpp
  ../../dep/ACE_wrappers/ace/Dev_Poll_Reactor.cpp
  ../../dep/ACE_wrappers/ace/Dirent.cpp
  ../../dep/ACE_wrappers/ace/Dirent_Selector.cpp
  ../../dep/ACE_wrappers/ace/DLL.cpp
  ../../dep/ACE_wrappers/ace/DLL_Manager.cpp
  ../../dep/ACE_wrappers/ace/Dump.cpp
  ../../dep/ACE_wrappers/ace/Dynamic.cpp
  ../../dep/ACE_wrappers/ace/Dynamic_Message_Strategy.cpp
  ../../dep/ACE_wrappers/ace/Dynamic_Service_Base.cpp
  ../../dep/ACE_wrappers/ace/Dynamic_Service_Dependency.cpp
  ../../dep/ACE_wrappers/ace/Encoding_Converter.cpp
  ../../dep/ACE_wrappers/ace/Encoding_Converter_Factory.cpp
  ../../dep/ACE_wrappers/ace/Event.cpp
  ../../dep/ACE_wrappers/ace/Event_Handler.cpp
  ../../dep/ACE_wrappers/ace/FIFO.cpp
  ../../dep/ACE_wrappers/ace/FIFO_Recv.cpp
  ../../dep/ACE_wrappers/ace/FIFO_Recv_Msg.cpp
  ../../dep/ACE_wrappers/ace/FIFO_Send.cpp
  ../../dep/ACE_wrappers/ace/FIFO_Send_Msg.cpp
  ../../dep/ACE_wrappers/ace/FILE.cpp
  ../../dep/ACE_wrappers/ace/FILE_Addr.cpp
  ../../dep/ACE_wrappers/ace/FILE_Connector.cpp
  ../../dep/ACE_wrappers/ace/FILE_IO.cpp
  ../../dep/ACE_wrappers/ace/File_Lock.cpp
  ../../dep/ACE_wrappers/ace/Filecache.cpp
  ../../dep/ACE_wrappers/ace/Flag_Manip.cpp
  ../../dep/ACE_wrappers/ace/Framework_Component.cpp
  ../../dep/ACE_wrappers/ace/Functor.cpp
  ../../dep/ACE_wrappers/ace/Functor_String.cpp
  ../../dep/ACE_wrappers/ace/Get_Opt.cpp
  ../../dep/ACE_wrappers/ace/gethrtime.cpp
  ../../dep/ACE_wrappers/ace/Handle_Ops.cpp
  ../../dep/ACE_wrappers/ace/Handle_Set.cpp
  ../../dep/ACE_wrappers/ace/Hashable.cpp
  ../../dep/ACE_wrappers/ace/High_Res_Timer.cpp
  ../../dep/ACE_wrappers/ace/ICMP_Socket.cpp
  ../../dep/ACE_wrappers/ace/INET_Addr.cpp
  ../../dep/ACE_wrappers/ace/Init_ACE.cpp
  ../../dep/ACE_wrappers/ace/IO_Cntl_Msg.cpp
  ../../dep/ACE_wrappers/ace/IO_SAP.cpp
  ../../dep/ACE_wrappers/ace/IOStream.cpp
  ../../dep/ACE_wrappers/ace/IPC_SAP.cpp
  ../../dep/ACE_wrappers/ace/Lib_Find.cpp
  ../../dep/ACE_wrappers/ace/Local_Memory_Pool.cpp
  ../../dep/ACE_wrappers/ace/Local_Name_Space.cpp
  ../../dep/ACE_wrappers/ace/Local_Tokens.cpp
  ../../dep/ACE_wrappers/ace/Lock.cpp
  ../../dep/ACE_wrappers/ace/Log_Msg.cpp
  ../../dep/ACE_wrappers/ace/Log_Msg_Backend.cpp
  ../../dep/ACE_wrappers/ace/Log_Msg_Callback.cpp
  ../../dep/ACE_wrappers/ace/Log_Msg_IPC.cpp
  ../../dep/ACE_wrappers/ace/Log_Msg_NT_Event_Log.cpp
  ../../dep/ACE_wrappers/ace/Log_Msg_UNIX_Syslog.cpp
  ../../dep/ACE_wrappers/ace/Log_Record.cpp
  ../../dep/ACE_wrappers/ace/Logging_Strategy.cpp
  ../../dep/ACE_wrappers/ace/LSOCK.cpp
  ../../dep/ACE_wrappers/ace/LSOCK_Acceptor.cpp
  ../../dep/ACE_wrappers/ace/LSOCK_CODgram.cpp
  ../../dep/ACE_wrappers/ace/LSOCK_Connector.cpp
  ../../dep/ACE_wrappers/ace/LSOCK_Dgram.cpp
  ../../dep/ACE_wrappers/ace/LSOCK_Stream.cpp
  ../../dep/ACE_wrappers/ace/Malloc.cpp
  ../../dep/ACE_wrappers/ace/Malloc_Allocator.cpp
  ../../dep/ACE_wrappers/ace/Manual_Event.cpp
  ../../dep/ACE_wrappers/ace/MEM_Acceptor.cpp
  ../../dep/ACE_wrappers/ace/MEM_Addr.cpp
  ../../dep/ACE_wrappers/ace/MEM_Connector.cpp
  ../../dep/ACE_wrappers/ace/MEM_IO.cpp
  ../../dep/ACE_wrappers/ace/Mem_Map.cpp
  ../../dep/ACE_wrappers/ace/MEM_SAP.cpp
  ../../dep/ACE_wrappers/ace/MEM_Stream.cpp
  ../../dep/ACE_wrappers/ace/Message_Block.cpp
  ../../dep/ACE_wrappers/ace/Message_Queue.cpp
  ../../dep/ACE_wrappers/ace/Message_Queue_NT.cpp
  ../../dep/ACE_wrappers/ace/Message_Queue_Vx.cpp
  ../../dep/ACE_wrappers/ace/Method_Request.cpp
  ../../dep/ACE_wrappers/ace/MMAP_Memory_Pool.cpp
  ../../dep/ACE_wrappers/ace/Monitor_Admin.cpp
  ../../dep/ACE_wrappers/ace/Monitor_Admin_Manager.cpp
  ../../dep/ACE_wrappers/ace/Monitor_Base.cpp
  ../../dep/ACE_wrappers/ace/Monitor_Control_Action.cpp
  ../../dep/ACE_wrappers/ace/Monitor_Control_Types.cpp
  ../../dep/ACE_wrappers/ace/Monitor_Point_Registry.cpp
  ../../dep/ACE_wrappers/ace/Monitor_Size.cpp
  ../../dep/ACE_wrappers/ace/Msg_WFMO_Reactor.cpp
  ../../dep/ACE_wrappers/ace/Multihomed_INET_Addr.cpp
  ../../dep/ACE_wrappers/ace/Mutex.cpp
  ../../dep/ACE_wrappers/ace/Name_Proxy.cpp
  ../../dep/ACE_wrappers/ace/Name_Request_Reply.cpp
  ../../dep/ACE_wrappers/ace/Name_Space.cpp
  ../../dep/ACE_wrappers/ace/Naming_Context.cpp
  ../../dep/ACE_wrappers/ace/Netlink_Addr.cpp
  ../../dep/ACE_wrappers/ace/Notification_Queue.cpp
  ../../dep/ACE_wrappers/ace/Notification_Strategy.cpp
  ../../dep/ACE_wrappers/ace/NT_Service.cpp
  ../../dep/ACE_wrappers/ace/Obchunk.cpp
  ../../dep/ACE_wrappers/ace/Object_Manager.cpp
  ../../dep/ACE_wrappers/ace/Object_Manager_Base.cpp
  ../../dep/ACE_wrappers/ace/OS_Errno.cpp
  ../../dep/ACE_wrappers/ace/OS_Log_Msg_Attributes.cpp
  ../../dep/ACE_wrappers/ace/OS_main.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_arpa_inet.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_ctype.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_dirent.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_dlfcn.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_errno.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_fcntl.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_math.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_netdb.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_poll.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_pwd.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_regex.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_signal.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_stdio.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_stdlib.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_string.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_strings.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_stropts.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_mman.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_msg.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_resource.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_select.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_sendfile.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_shm.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_socket.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_stat.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_time.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_uio.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_utsname.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_sys_wait.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_Thread.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_time.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_unistd.cpp
  ../../dep/ACE_wrappers/ace/OS_NS_wchar.cpp
  ../../dep/ACE_wrappers/ace/OS_QoS.cpp
  ../../dep/ACE_wrappers/ace/OS_Thread_Adapter.cpp
  ../../dep/ACE_wrappers/ace/OS_TLI.cpp
  ../../dep/ACE_wrappers/ace/Pagefile_Memory_Pool.cpp
  ../../dep/ACE_wrappers/ace/Parse_Node.cpp
  ../../dep/ACE_wrappers/ace/PI_Malloc.cpp
  ../../dep/ACE_wrappers/ace/Ping_Socket.cpp
  ../../dep/ACE_wrappers/ace/Pipe.cpp
  ../../dep/ACE_wrappers/ace/POSIX_Asynch_IO.cpp
  ../../dep/ACE_wrappers/ace/POSIX_CB_Proactor.cpp
  ../../dep/ACE_wrappers/ace/POSIX_Proactor.cpp
  ../../dep/ACE_wrappers/ace/Priority_Reactor.cpp
  ../../dep/ACE_wrappers/ace/Proactor.cpp
  ../../dep/ACE_wrappers/ace/Proactor_Impl.cpp
  ../../dep/ACE_wrappers/ace/Process.cpp
  ../../dep/ACE_wrappers/ace/Process_Manager.cpp
  ../../dep/ACE_wrappers/ace/Process_Mutex.cpp
  ../../dep/ACE_wrappers/ace/Process_Semaphore.cpp
  ../../dep/ACE_wrappers/ace/Profile_Timer.cpp
  ../../dep/ACE_wrappers/ace/Reactor.cpp
  ../../dep/ACE_wrappers/ace/Reactor_Impl.cpp
  ../../dep/ACE_wrappers/ace/Reactor_Notification_Strategy.cpp
  ../../dep/ACE_wrappers/ace/Reactor_Timer_Interface.cpp
  ../../dep/ACE_wrappers/ace/Read_Buffer.cpp
  ../../dep/ACE_wrappers/ace/Recursive_Thread_Mutex.cpp
  ../../dep/ACE_wrappers/ace/Recyclable.cpp
  ../../dep/ACE_wrappers/ace/Registry.cpp
  ../../dep/ACE_wrappers/ace/Registry_Name_Space.cpp
  ../../dep/ACE_wrappers/ace/Remote_Name_Space.cpp
  ../../dep/ACE_wrappers/ace/Remote_Tokens.cpp
  ../../dep/ACE_wrappers/ace/Rtems_init.c
  ../../dep/ACE_wrappers/ace/RW_Mutex.cpp
  ../../dep/ACE_wrappers/ace/RW_Process_Mutex.cpp
  ../../dep/ACE_wrappers/ace/RW_Thread_Mutex.cpp
  ../../dep/ACE_wrappers/ace/Sample_History.cpp
  ../../dep/ACE_wrappers/ace/Sbrk_Memory_Pool.cpp
  ../../dep/ACE_wrappers/ace/Sched_Params.cpp
  ../../dep/ACE_wrappers/ace/Select_Reactor_Base.cpp
  ../../dep/ACE_wrappers/ace/Semaphore.cpp
  ../../dep/ACE_wrappers/ace/Service_Config.cpp
  ../../dep/ACE_wrappers/ace/Service_Gestalt.cpp
  ../../dep/ACE_wrappers/ace/Service_Manager.cpp
  ../../dep/ACE_wrappers/ace/Service_Object.cpp
  ../../dep/ACE_wrappers/ace/Service_Repository.cpp
  ../../dep/ACE_wrappers/ace/Service_Types.cpp
  ../../dep/ACE_wrappers/ace/Shared_Memory.cpp
  ../../dep/ACE_wrappers/ace/Shared_Memory_MM.cpp
  ../../dep/ACE_wrappers/ace/Shared_Memory_Pool.cpp
  ../../dep/ACE_wrappers/ace/Shared_Memory_SV.cpp
  ../../dep/ACE_wrappers/ace/Shared_Object.cpp
  ../../dep/ACE_wrappers/ace/Sig_Adapter.cpp
  ../../dep/ACE_wrappers/ace/Sig_Handler.cpp
  ../../dep/ACE_wrappers/ace/Signal.cpp
  ../../dep/ACE_wrappers/ace/SOCK.cpp
  ../../dep/ACE_wrappers/ace/SOCK_Acceptor.cpp
  ../../dep/ACE_wrappers/ace/SOCK_CODgram.cpp
  ../../dep/ACE_wrappers/ace/Sock_Connect.cpp
  ../../dep/ACE_wrappers/ace/SOCK_Connector.cpp
  ../../dep/ACE_wrappers/ace/SOCK_Dgram.cpp
  ../../dep/ACE_wrappers/ace/SOCK_Dgram_Bcast.cpp
  ../../dep/ACE_wrappers/ace/SOCK_Dgram_Mcast.cpp
  ../../dep/ACE_wrappers/ace/SOCK_IO.cpp
  ../../dep/ACE_wrappers/ace/SOCK_Netlink.cpp
  ../../dep/ACE_wrappers/ace/SOCK_SEQPACK_Acceptor.cpp
  ../../dep/ACE_wrappers/ace/SOCK_SEQPACK_Association.cpp
  ../../dep/ACE_wrappers/ace/SOCK_SEQPACK_Connector.cpp
  ../../dep/ACE_wrappers/ace/SOCK_Stream.cpp
  ../../dep/ACE_wrappers/ace/SPIPE.cpp
  ../../dep/ACE_wrappers/ace/SPIPE_Acceptor.cpp
  ../../dep/ACE_wrappers/ace/SPIPE_Addr.cpp
  ../../dep/ACE_wrappers/ace/SPIPE_Connector.cpp
  ../../dep/ACE_wrappers/ace/SPIPE_Stream.cpp
  ../../dep/ACE_wrappers/ace/SString.cpp
  ../../dep/ACE_wrappers/ace/Stack_Trace.cpp
  ../../dep/ACE_wrappers/ace/Stats.cpp
  ../../dep/ACE_wrappers/ace/String_Base_Const.cpp
  ../../dep/ACE_wrappers/ace/SUN_Proactor.cpp
  ../../dep/ACE_wrappers/ace/SV_Message.cpp
  ../../dep/ACE_wrappers/ace/SV_Message_Queue.cpp
  ../../dep/ACE_wrappers/ace/SV_Semaphore_Complex.cpp
  ../../dep/ACE_wrappers/ace/SV_Semaphore_Simple.cpp
  ../../dep/ACE_wrappers/ace/SV_Shared_Memory.cpp
  ../../dep/ACE_wrappers/ace/Svc_Conf_Lexer.cpp
  ../../dep/ACE_wrappers/ace/Svc_Conf_y.cpp
  ../../dep/ACE_wrappers/ace/Synch_Options.cpp
  ../../dep/ACE_wrappers/ace/System_Time.cpp
  ../../dep/ACE_wrappers/ace/Task.cpp
  ../../dep/ACE_wrappers/ace/Thread.cpp
  ../../dep/ACE_wrappers/ace/Thread_Adapter.cpp
  ../../dep/ACE_wrappers/ace/Thread_Control.cpp
  ../../dep/ACE_wrappers/ace/Thread_Exit.cpp
  ../../dep/ACE_wrappers/ace/Thread_Hook.cpp
  ../../dep/ACE_wrappers/ace/Thread_Manager.cpp
  ../../dep/ACE_wrappers/ace/Thread_Mutex.cpp
  ../../dep/ACE_wrappers/ace/Thread_Semaphore.cpp
  ../../dep/ACE_wrappers/ace/Throughput_Stats.cpp
  ../../dep/ACE_wrappers/ace/Time_Value.cpp
  ../../dep/ACE_wrappers/ace/Timeprobe.cpp
  ../../dep/ACE_wrappers/ace/TLI.cpp
  ../../dep/ACE_wrappers/ace/TLI_Acceptor.cpp
  ../../dep/ACE_wrappers/ace/TLI_Connector.cpp
  ../../dep/ACE_wrappers/ace/TLI_Stream.cpp
  ../../dep/ACE_wrappers/ace/Token.cpp
  ../../dep/ACE_wrappers/ace/Token_Collection.cpp
  ../../dep/ACE_wrappers/ace/Token_Invariants.cpp
  ../../dep/ACE_wrappers/ace/Token_Manager.cpp
  ../../dep/ACE_wrappers/ace/Token_Request_Reply.cpp
  ../../dep/ACE_wrappers/ace/TP_Reactor.cpp
  ../../dep/ACE_wrappers/ace/Trace.cpp
  ../../dep/ACE_wrappers/ace/TSS_Adapter.cpp
  ../../dep/ACE_wrappers/ace/TTY_IO.cpp
  ../../dep/ACE_wrappers/ace/UNIX_Addr.cpp
  ../../dep/ACE_wrappers/ace/UPIPE_Acceptor.cpp
  ../../dep/ACE_wrappers/ace/UPIPE_Connector.cpp
  ../../dep/ACE_wrappers/ace/UPIPE_Stream.cpp
  ../../dep/ACE_wrappers/ace/UTF16_Encoding_Converter.cpp
  ../../dep/ACE_wrappers/ace/UTF32_Encoding_Converter.cpp
  ../../dep/ACE_wrappers/ace/UTF8_Encoding_Converter.cpp
  ../../dep/ACE_wrappers/ace/UUID.cpp
  ../../dep/ACE_wrappers/ace/WFMO_Reactor.cpp
  ../../dep/ACE_wrappers/ace/WIN32_Asynch_IO.cpp
  ../../dep/ACE_wrappers/ace/WIN32_Proactor.cpp
  ../../dep/ACE_wrappers/ace/XML_Svc_Conf.cpp
  ../../dep/ACE_wrappers/ace/XTI_ATM_Mcast.cpp
  ../../dep/ACE_wrappers/ace/ACE.inl
  ../../dep/ACE_wrappers/ace/ace_wchar.inl
  ../../dep/ACE_wrappers/ace/Activation_Queue.inl
  ../../dep/ACE_wrappers/ace/Active_Map_Manager.inl
  ../../dep/ACE_wrappers/ace/Active_Map_Manager_T.inl
  ../../dep/ACE_wrappers/ace/Addr.inl
  ../../dep/ACE_wrappers/ace/ARGV.inl
  ../../dep/ACE_wrappers/ace/Argv_Type_Converter.inl
  ../../dep/ACE_wrappers/ace/Array_Base.inl
  ../../dep/ACE_wrappers/ace/Array_Map.inl
  ../../dep/ACE_wrappers/ace/Asynch_IO_Impl.inl
  ../../dep/ACE_wrappers/ace/ATM_Acceptor.inl
  ../../dep/ACE_wrappers/ace/ATM_Addr.inl
  ../../dep/ACE_wrappers/ace/ATM_Connector.inl
  ../../dep/ACE_wrappers/ace/ATM_Params.inl
  ../../dep/ACE_wrappers/ace/ATM_QoS.inl
  ../../dep/ACE_wrappers/ace/ATM_Stream.inl
  ../../dep/ACE_wrappers/ace/Atomic_Op.inl
  ../../dep/ACE_wrappers/ace/Atomic_Op_T.inl
  ../../dep/ACE_wrappers/ace/Auto_Event.inl
  ../../dep/ACE_wrappers/ace/Auto_Functor.inl
  ../../dep/ACE_wrappers/ace/Auto_IncDec_T.inl
  ../../dep/ACE_wrappers/ace/Auto_Ptr.inl
  ../../dep/ACE_wrappers/ace/Barrier.inl
  ../../dep/ACE_wrappers/ace/Base_Thread_Adapter.inl
  ../../dep/ACE_wrappers/ace/Based_Pointer_T.inl
  ../../dep/ACE_wrappers/ace/Basic_Stats.inl
  ../../dep/ACE_wrappers/ace/Basic_Types.inl
  ../../dep/ACE_wrappers/ace/Bound_Ptr.inl
  ../../dep/ACE_wrappers/ace/Cache_Map_Manager_T.inl
  ../../dep/ACE_wrappers/ace/Caching_Strategies_T.inl
  ../../dep/ACE_wrappers/ace/Capabilities.inl
  ../../dep/ACE_wrappers/ace/CDR_Base.inl
  ../../dep/ACE_wrappers/ace/CDR_Size.inl
  ../../dep/ACE_wrappers/ace/CDR_Stream.inl
  ../../dep/ACE_wrappers/ace/Cleanup.inl
  ../../dep/ACE_wrappers/ace/Codeset_Registry.inl
  ../../dep/ACE_wrappers/ace/Condition_T.inl
  ../../dep/ACE_wrappers/ace/Condition_Thread_Mutex.inl
  ../../dep/ACE_wrappers/ace/Configuration.inl
  ../../dep/ACE_wrappers/ace/Containers.inl
  ../../dep/ACE_wrappers/ace/Containers_T.inl
  ../../dep/ACE_wrappers/ace/Date_Time.inl
  ../../dep/ACE_wrappers/ace/DEV.inl
  ../../dep/ACE_wrappers/ace/DEV_Addr.inl
  ../../dep/ACE_wrappers/ace/DEV_Connector.inl
  ../../dep/ACE_wrappers/ace/DEV_IO.inl
  ../../dep/ACE_wrappers/ace/Dev_Poll_Reactor.inl
  ../../dep/ACE_wrappers/ace/Dirent.inl
  ../../dep/ACE_wrappers/ace/Dirent_Selector.inl
  ../../dep/ACE_wrappers/ace/Dynamic.inl
  ../../dep/ACE_wrappers/ace/Dynamic_Message_Strategy.inl
  ../../dep/ACE_wrappers/ace/Dynamic_Service.inl
  ../../dep/ACE_wrappers/ace/Env_Value_T.inl
  ../../dep/ACE_wrappers/ace/Event.inl
  ../../dep/ACE_wrappers/ace/Event_Handler.inl
  ../../dep/ACE_wrappers/ace/Event_Handler_T.inl
  ../../dep/ACE_wrappers/ace/FIFO.inl
  ../../dep/ACE_wrappers/ace/FIFO_Recv.inl
  ../../dep/ACE_wrappers/ace/FIFO_Recv_Msg.inl
  ../../dep/ACE_wrappers/ace/FIFO_Send.inl
  ../../dep/ACE_wrappers/ace/FIFO_Send_Msg.inl
  ../../dep/ACE_wrappers/ace/FILE.inl
  ../../dep/ACE_wrappers/ace/FILE_Addr.inl
  ../../dep/ACE_wrappers/ace/FILE_Connector.inl
  ../../dep/ACE_wrappers/ace/FILE_IO.inl
  ../../dep/ACE_wrappers/ace/File_Lock.inl
  ../../dep/ACE_wrappers/ace/Flag_Manip.inl
  ../../dep/ACE_wrappers/ace/Framework_Component.inl
  ../../dep/ACE_wrappers/ace/Functor.inl
  ../../dep/ACE_wrappers/ace/Functor_String.inl
  ../../dep/ACE_wrappers/ace/Functor_T.inl
  ../../dep/ACE_wrappers/ace/Get_Opt.inl
  ../../dep/ACE_wrappers/ace/Guard_T.inl
  ../../dep/ACE_wrappers/ace/Handle_Gobbler.inl
  ../../dep/ACE_wrappers/ace/Handle_Set.inl
  ../../dep/ACE_wrappers/ace/Hash_Cache_Map_Manager_T.inl
  ../../dep/ACE_wrappers/ace/Hash_Map_Manager_T.inl
  ../../dep/ACE_wrappers/ace/Hash_Map_With_Allocator_T.inl
  ../../dep/ACE_wrappers/ace/Hash_Multi_Map_Manager_T.inl
  ../../dep/ACE_wrappers/ace/Hashable.inl
  ../../dep/ACE_wrappers/ace/High_Res_Timer.inl
  ../../dep/ACE_wrappers/ace/INET_Addr.inl
  ../../dep/ACE_wrappers/ace/Intrusive_Auto_Ptr.inl
  ../../dep/ACE_wrappers/ace/Intrusive_List.inl
  ../../dep/ACE_wrappers/ace/Intrusive_List_Node.inl
  ../../dep/ACE_wrappers/ace/IO_Cntl_Msg.inl
  ../../dep/ACE_wrappers/ace/IO_SAP.inl
  ../../dep/ACE_wrappers/ace/IOStream_T.inl
  ../../dep/ACE_wrappers/ace/IPC_SAP.inl
  ../../dep/ACE_wrappers/ace/Local_Tokens.inl
  ../../dep/ACE_wrappers/ace/Lock.inl
  ../../dep/ACE_wrappers/ace/Lock_Adapter_T.inl
  ../../dep/ACE_wrappers/ace/Log_Msg.inl
  ../../dep/ACE_wrappers/ace/Log_Record.inl
  ../../dep/ACE_wrappers/ace/LSOCK.inl
  ../../dep/ACE_wrappers/ace/LSOCK_CODgram.inl
  ../../dep/ACE_wrappers/ace/LSOCK_Connector.inl
  ../../dep/ACE_wrappers/ace/LSOCK_Dgram.inl
  ../../dep/ACE_wrappers/ace/LSOCK_Stream.inl
  ../../dep/ACE_wrappers/ace/Malloc.inl
  ../../dep/ACE_wrappers/ace/Malloc_Allocator.inl
  ../../dep/ACE_wrappers/ace/Malloc_T.inl
  ../../dep/ACE_wrappers/ace/Managed_Object.inl
  ../../dep/ACE_wrappers/ace/Manual_Event.inl
  ../../dep/ACE_wrappers/ace/Map_Manager.inl
  ../../dep/ACE_wrappers/ace/Map_T.inl
  ../../dep/ACE_wrappers/ace/MEM_Acceptor.inl
  ../../dep/ACE_wrappers/ace/MEM_Addr.inl
  ../../dep/ACE_wrappers/ace/MEM_Connector.inl
  ../../dep/ACE_wrappers/ace/MEM_IO.inl
  ../../dep/ACE_wrappers/ace/Mem_Map.inl
  ../../dep/ACE_wrappers/ace/MEM_SAP.inl
  ../../dep/ACE_wrappers/ace/MEM_Stream.inl
  ../../dep/ACE_wrappers/ace/Message_Block.inl
  ../../dep/ACE_wrappers/ace/Message_Block_T.inl
  ../../dep/ACE_wrappers/ace/Message_Queue.inl
  ../../dep/ACE_wrappers/ace/Message_Queue_NT.inl
  ../../dep/ACE_wrappers/ace/Message_Queue_Vx.inl
  ../../dep/ACE_wrappers/ace/Metrics_Cache_T.inl
  ../../dep/ACE_wrappers/ace/MMAP_Memory_Pool.inl
  ../../dep/ACE_wrappers/ace/Module.inl
  ../../dep/ACE_wrappers/ace/Monitor_Base.inl
  ../../dep/ACE_wrappers/ace/Msg_WFMO_Reactor.inl
  ../../dep/ACE_wrappers/ace/Multihomed_INET_Addr.inl
  ../../dep/ACE_wrappers/ace/Mutex.inl
  ../../dep/ACE_wrappers/ace/Naming_Context.inl
  ../../dep/ACE_wrappers/ace/Netlink_Addr.inl
  ../../dep/ACE_wrappers/ace/Notification_Queue.inl
  ../../dep/ACE_wrappers/ace/Notification_Strategy.inl
  ../../dep/ACE_wrappers/ace/NT_Service.inl
  ../../dep/ACE_wrappers/ace/Obchunk.inl
  ../../dep/ACE_wrappers/ace/Object_Manager.inl
  ../../dep/ACE_wrappers/ace/Obstack_T.inl
#  ../../dep/ACE_wrappers/ace/OS.inl
  ../../dep/ACE_wrappers/ace/OS_Errno.inl
  ../../dep/ACE_wrappers/ace/OS_Log_Msg_Attributes.inl
  ../../dep/ACE_wrappers/ace/OS_NS_arpa_inet.inl
  ../../dep/ACE_wrappers/ace/OS_NS_ctype.inl
  ../../dep/ACE_wrappers/ace/OS_NS_dirent.inl
  ../../dep/ACE_wrappers/ace/OS_NS_dlfcn.inl
  ../../dep/ACE_wrappers/ace/OS_NS_errno.inl
  ../../dep/ACE_wrappers/ace/OS_NS_fcntl.inl
  ../../dep/ACE_wrappers/ace/OS_NS_math.inl
  ../../dep/ACE_wrappers/ace/OS_NS_netdb.inl
  ../../dep/ACE_wrappers/ace/OS_NS_poll.inl
  ../../dep/ACE_wrappers/ace/OS_NS_pwd.inl
  ../../dep/ACE_wrappers/ace/OS_NS_regex.inl
  ../../dep/ACE_wrappers/ace/OS_NS_signal.inl
  ../../dep/ACE_wrappers/ace/OS_NS_stdio.inl
  ../../dep/ACE_wrappers/ace/OS_NS_stdlib.inl
  ../../dep/ACE_wrappers/ace/OS_NS_string.inl
  ../../dep/ACE_wrappers/ace/OS_NS_strings.inl
  ../../dep/ACE_wrappers/ace/OS_NS_stropts.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_mman.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_msg.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_resource.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_select.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_sendfile.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_shm.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_socket.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_stat.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_time.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_uio.inl
  ../../dep/ACE_wrappers/ace/OS_NS_sys_wait.inl
  ../../dep/ACE_wrappers/ace/OS_NS_Thread.inl
  ../../dep/ACE_wrappers/ace/OS_NS_time.inl
  ../../dep/ACE_wrappers/ace/OS_NS_unistd.inl
  ../../dep/ACE_wrappers/ace/OS_NS_wchar.inl
  ../../dep/ACE_wrappers/ace/OS_TLI.inl
  ../../dep/ACE_wrappers/ace/Pagefile_Memory_Pool.inl
  ../../dep/ACE_wrappers/ace/Pair_T.inl
  ../../dep/ACE_wrappers/ace/PI_Malloc.inl
  ../../dep/ACE_wrappers/ace/Ping_Socket.inl
  ../../dep/ACE_wrappers/ace/Pipe.inl
  ../../dep/ACE_wrappers/ace/POSIX_Proactor.inl
  ../../dep/ACE_wrappers/ace/Proactor.inl
  ../../dep/ACE_wrappers/ace/Process.inl
  ../../dep/ACE_wrappers/ace/Process_Manager.inl
  ../../dep/ACE_wrappers/ace/Process_Mutex.inl
  ../../dep/ACE_wrappers/ace/Process_Semaphore.inl
  ../../dep/ACE_wrappers/ace/Profile_Timer.inl
  ../../dep/ACE_wrappers/ace/RB_Tree.inl
  ../../dep/ACE_wrappers/ace/Reactor.inl
  ../../dep/ACE_wrappers/ace/Reactor_Notification_Strategy.inl
  ../../dep/ACE_wrappers/ace/Read_Buffer.inl
  ../../dep/ACE_wrappers/ace/Recursive_Thread_Mutex.inl
  ../../dep/ACE_wrappers/ace/Recyclable.inl
  ../../dep/ACE_wrappers/ace/Refcountable_T.inl
  ../../dep/ACE_wrappers/ace/Refcounted_Auto_Ptr.inl
  ../../dep/ACE_wrappers/ace/Remote_Tokens.inl
  ../../dep/ACE_wrappers/ace/Reverse_Lock_T.inl
  ../../dep/ACE_wrappers/ace/RW_Mutex.inl
  ../../dep/ACE_wrappers/ace/RW_Process_Mutex.inl
  ../../dep/ACE_wrappers/ace/RW_Thread_Mutex.inl
  ../../dep/ACE_wrappers/ace/Sample_History.inl
  ../../dep/ACE_wrappers/ace/Sched_Params.inl
  ../../dep/ACE_wrappers/ace/Select_Reactor_Base.inl
  ../../dep/ACE_wrappers/ace/Select_Reactor_T.inl
  ../../dep/ACE_wrappers/ace/Semaphore.inl
  ../../dep/ACE_wrappers/ace/Service_Config.inl
  ../../dep/ACE_wrappers/ace/Service_Gestalt.inl
  ../../dep/ACE_wrappers/ace/Service_Object.inl
  ../../dep/ACE_wrappers/ace/Service_Repository.inl
  ../../dep/ACE_wrappers/ace/Service_Types.inl
  ../../dep/ACE_wrappers/ace/Shared_Memory_MM.inl
  ../../dep/ACE_wrappers/ace/Shared_Memory_SV.inl
  ../../dep/ACE_wrappers/ace/Shared_Object.inl
  ../../dep/ACE_wrappers/ace/Sig_Handler.inl
  ../../dep/ACE_wrappers/ace/Signal.inl
  ../../dep/ACE_wrappers/ace/Singleton.inl
  ../../dep/ACE_wrappers/ace/SOCK.inl
  ../../dep/ACE_wrappers/ace/SOCK_Acceptor.inl
  ../../dep/ACE_wrappers/ace/SOCK_CODgram.inl
  ../../dep/ACE_wrappers/ace/SOCK_Connector.inl
  ../../dep/ACE_wrappers/ace/SOCK_Dgram.inl
  ../../dep/ACE_wrappers/ace/SOCK_Dgram_Bcast.inl
  ../../dep/ACE_wrappers/ace/SOCK_Dgram_Mcast.inl
  ../../dep/ACE_wrappers/ace/SOCK_IO.inl
  ../../dep/ACE_wrappers/ace/SOCK_Netlink.inl
  ../../dep/ACE_wrappers/ace/SOCK_SEQPACK_Acceptor.inl
  ../../dep/ACE_wrappers/ace/SOCK_SEQPACK_Association.inl
  ../../dep/ACE_wrappers/ace/SOCK_SEQPACK_Connector.inl
  ../../dep/ACE_wrappers/ace/SOCK_Stream.inl
  ../../dep/ACE_wrappers/ace/SPIPE.inl
  ../../dep/ACE_wrappers/ace/SPIPE_Addr.inl
  ../../dep/ACE_wrappers/ace/SPIPE_Connector.inl
  ../../dep/ACE_wrappers/ace/SPIPE_Stream.inl
  ../../dep/ACE_wrappers/ace/SString.inl
  ../../dep/ACE_wrappers/ace/Stats.inl
  ../../dep/ACE_wrappers/ace/Strategies_T.inl
  ../../dep/ACE_wrappers/ace/Stream.inl
  ../../dep/ACE_wrappers/ace/String_Base.inl
  ../../dep/ACE_wrappers/ace/SV_Message.inl
  ../../dep/ACE_wrappers/ace/SV_Message_Queue.inl
  ../../dep/ACE_wrappers/ace/SV_Semaphore_Complex.inl
  ../../dep/ACE_wrappers/ace/SV_Semaphore_Simple.inl
  ../../dep/ACE_wrappers/ace/SV_Shared_Memory.inl
  ../../dep/ACE_wrappers/ace/Task.inl
  ../../dep/ACE_wrappers/ace/Task_Ex_T.inl
  ../../dep/ACE_wrappers/ace/Task_T.inl
  ../../dep/ACE_wrappers/ace/Thread.inl
  ../../dep/ACE_wrappers/ace/Thread_Adapter.inl
  ../../dep/ACE_wrappers/ace/Thread_Control.inl
  ../../dep/ACE_wrappers/ace/Thread_Manager.inl
  ../../dep/ACE_wrappers/ace/Thread_Mutex.inl
  ../../dep/ACE_wrappers/ace/Thread_Semaphore.inl
  ../../dep/ACE_wrappers/ace/Time_Value.inl
  ../../dep/ACE_wrappers/ace/Timeprobe.inl
  ../../dep/ACE_wrappers/ace/Timer_Queue_Adapters.inl
  ../../dep/ACE_wrappers/ace/Timer_Queue_T.inl
  ../../dep/ACE_wrappers/ace/TLI.inl
  ../../dep/ACE_wrappers/ace/TLI_Connector.inl
  ../../dep/ACE_wrappers/ace/TLI_Stream.inl
  ../../dep/ACE_wrappers/ace/Token.inl
  ../../dep/ACE_wrappers/ace/Token_Collection.inl
  ../../dep/ACE_wrappers/ace/Token_Manager.inl
  ../../dep/ACE_wrappers/ace/Token_Request_Reply.inl
  ../../dep/ACE_wrappers/ace/TP_Reactor.inl
  ../../dep/ACE_wrappers/ace/TSS_T.inl
  ../../dep/ACE_wrappers/ace/Typed_SV_Message.inl
  ../../dep/ACE_wrappers/ace/Typed_SV_Message_Queue.inl
  ../../dep/ACE_wrappers/ace/Unbounded_Queue.inl
  ../../dep/ACE_wrappers/ace/Unbounded_Set.inl
  ../../dep/ACE_wrappers/ace/Unbounded_Set_Ex.inl
  ../../dep/ACE_wrappers/ace/UNIX_Addr.inl
  ../../dep/ACE_wrappers/ace/UPIPE_Acceptor.inl
  ../../dep/ACE_wrappers/ace/UPIPE_Connector.inl
  ../../dep/ACE_wrappers/ace/UPIPE_Stream.inl
  ../../dep/ACE_wrappers/ace/UTF16_Encoding_Converter.inl
  ../../dep/ACE_wrappers/ace/UUID.inl
  ../../dep/ACE_wrappers/ace/Vector_T.inl
  ../../dep/ACE_wrappers/ace/WFMO_Reactor.inl
  ../../dep/ACE_wrappers/ace/XTI_ATM_Mcast.inl
  ../../dep/ACE_wrappers/ace/ace.rc
)

include_directories( 
  ../../dep/ACE_wrappers
)

add_definitions( 
  -DACE_BUILD_DLL
  -DWIN32
  -D_CRT_NONSTDC_NO_DEPRECATE
  -D_CRT_NONSTDC_NO_WARNINGS
  -D_CRT_SECURE_NO_DEPRECATE
  -D_CRT_SECURE_NO_WARNINGS
  -D_WINDOWS
)

add_library(ACE SHARED
  ${ace_STAT_SRCS}
)

install(TARGETS ACE
  RUNTIME DESTINATION ${LIBS_DIR}
)